--- a/aboutme.html
+++ b/aboutme.html
@@ -74,7 +74,7 @@
        <span class="aboutme-span-2">I like to create my own design for my</span>
        <span class="aboutme-span-3">project with figma and start coding</span>
        <span class="aboutme-span-3">process.</span>
-       <p class="aboutme-p2">---------------------------------------------------------------</p>
+       <p class="aboutme-p">---------------------------------------------------------------</p>
        
        </div>
 
