--- a/skill.html
+++ b/skill.html
@@ -57,29 +57,27 @@
       font-weight: bold;
       padding: 2px;
     }
-
-    /* Custom colors for each progress bar */
     .progress-bar-html {
-      background-color: black; /* Red */
-      width: 60%; /* Adjust width as needed */
+      background-color: black; 
+      width: 60%; 
     }
 
     .progress-bar-css {
-      background-color: black; /* Blue */
-      width: 20%; /* Adjust width as needed */
+      background-color: black; 
+      width: 20%;
     }
 
     .progress-bar-js {
-      background-color: black; /* Orange */
-      width: 70%; /* Adjust width as needed */
+      background-color: black; 
+      width: 70%; 
     }
     .progress-bar-html-css {
-      background-color: black; /* Orange */
-      width: 80%; /* Adjust width as needed */
+      background-color: black; 
+      width: 35%; 
     }
     .progress-bar-js2 {
-      background-color: black; /* Orange */
-      width: 50%; /* Adjust width as needed */
+      background-color: black; 
+      width: 50%; 
     }
     
 </style>
@@ -133,9 +131,9 @@
               <div class="progress-bar progress-bar-js block">70%</div>
             </div>
 
-            <div class="progress-header">HTML,CSS</div>
+            <div class="progress-header">Typescript</div>
             <div class="progress-bar-wrapper">
-              <div class="progress-bar progress-bar-html-css block">80%</div>
+              <div class="progress-bar progress-bar-html-css block">35%</div>
             </div>
 
             <div class="progress-header">JavaScript</div>
