--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
         
     </style>
 </head>
-<body class="bg-theme">
+<body>
     <nav>
         <div class="logo">
             <h5 class="logo-h5">Shii</h5>
