--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
             
         </div>
 
+         <div class="wrapper-form block">
+       <h1 class="strength-h1">My Strength</h1>
+       <h6 class="strength-h6">--------------------------------------------------------</h6>
+       <h6 class="strength-h6">I'm always enthusiastic when it comes to app development. In the web design sector,
+        I prefer creating my own design with Figma and start coding process. I enjoy learning and self-studying new things related to
+        app development. In the future, I plan to create and launch my own design apps. 
+       </h6>
+     <h6 class="strength-icon"><i class="fa-solid fa-hand-fist"></i>
+        <i class="fa-solid fa-hand-fist"></i>
+        <i class="fa-solid fa-hand-fist"></i>
+     </h6>
+      </div>
         
         <div class="wrapper block">
             <button class="contact-btn"><i class="fa-solid fa-thumbtack"></i></button><span class="contact-span">LIST OF SOME PROJECTS</span><br>
