--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             
         </div>
 
-         <div class="wrapper-form block">
+         <div class="wrapper-form-strength block">
        <h1 class="strength-h1">My Strength</h1>
        <h6 class="strength-h6">--------------------------------------------------------</h6>
        <h6 class="strength-h6">I'm always enthusiastic when it comes to app development. In the web design sector,
