--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
             <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Album Selling System</span>
         </div>
 
+        
+        <div class="id-div">
+        <img src="IDcard.jpeg" class="id-img">
+        </div>
+
             <h6 class="page3-h6">Contact</h6>
        
             <form method="post" action="" name="contact-form" class="wrapper-form block">
