--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
         
         <div class="wrapper block">
-            <button class="contact-btn"><i class="fa-solid fa-thumbtack"></i></button><span class="contact-span">LIST OF SOME PROJECTS</span><br>
+           <button class="strength-button"><h1 class="strength-h1">List Of Some Projects</h1></button> 
             <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Health/fitness tracker</span><br>
             <button class="contact-btn"> <i class="fa-solid fa-check"></i></button><span class="contact-span">To Do List</span><br>
             <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Online learning System</span><br>
