--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
         </nav>
    
     <div class="wrapper block">
-        <button class="contact-btn"><i class="fa-solid fa-thumbtack"></i></button><span class="contact-span">LIST OF SOME PROJECTS</span><br>
+        <button class="strength-button"><h1 class="strength-h1">Some Projects</h1></button> 
         <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Health/fitness tracker</span><br>
         <button class="contact-btn"> <i class="fa-solid fa-check"></i></button><span class="contact-span">To Do List</span><br>
         <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Online learning System</span><br>
@@ -67,7 +67,7 @@
 
 
     <div class="pj-wrapper block">
-        <button class="pj-list-btn">some web design</button>
+        <button class="pj-list-btn">Some Web Design</button>
         
        </div>
        <img src="albumsellingpj.png"  class="pj1"> 
