--- a/edu.html
+++ b/edu.html
@@ -49,7 +49,7 @@
      
         </nav>
     
-   <div class="id-div">
+   <div class="id-div block">
             <img src="idcard.png" class="id2-img">
          </div>
 
