--- a/skill.html
+++ b/skill.html
@@ -79,6 +79,10 @@
       background-color: black; 
       width: 65%; 
     }
+    .progress-bar-nodejs {
+      background-color: black; 
+      width: 40%; 
+    }
     
 </style>
 <body class="bg-theme">
@@ -140,6 +144,12 @@
             <div class="progress-bar-wrapper">
               <div class="progress-bar progress-bar-js2 block">65%</div>
             </div>
+
+             <div class="progress-header">Node.js</div>
+            <div class="progress-bar-wrapper">
+              <div class="progress-bar progress-bar-nodejs block">40%</div>
+            </div>
+            
           </div>
           <img src="powerpuffskill Background Removed.png" class="skill-img">
 
