--- a/edu.html
+++ b/edu.html
@@ -57,6 +57,7 @@
      <h6 class="strength-h6-edu">-Participation Certificate at HackAtom Myanmar 2024 </h6>
      <h6 class="strength-h6-edu">-Volunteer Experience At Talk With Me (With Me Organization) </h6>
      <h6 class="strength-h6-edu">-Scout Member since High School </h6>
+    <button class="btnpdf">Download pdf <i class="fa-solid fa-download"></i></button>
   </div>
 
   <img src="memory3.jpeg"  class="pj1"> 
