--- a/index.html
+++ b/index.html
@@ -122,11 +122,36 @@
             <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Album Selling System</span>
         </div>
 
-        
-        <div class="id-div">
-        <img src="IDcard.jpeg" class="id-img">
-        </div>
+        <!-- Project Container -->
+      <h6 class="page3-h6">Project Description</h6>
+  <div class="project-container">
+    <!-- Project 1 -->
+    <div class="project">
+      <img src="fitness-tracking-app-mobile-vector-illustration-cartoon-style-smartphone-with-heart-rate-tracker_107661-153.avif" alt="Project 1">
+      <div class="project-info">
+        <h3>Fitness Tracker</h3>
+        <p>Our project focus on the system that monitors health metrics like steps, heart rate, and sleep patterns to help users track and improve their physical activity.</p>
+      </div>
+    </div>
 
+    <!-- Project 2 -->
+    <div class="project">
+      <img src="todolist.webp" alt="Project 2">
+      <div class="project-info">
+        <h3>To Do List</h3>
+        <p>Our project focus on a system that helps users organize, prioritize, and manage tasks efficiently by setting reminders and tracking progress.</p>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project">
+      <img src="online-learning-concept-with-cartoon-character_29937-6231.avif" alt="Project 3">
+      <div class="project-info">
+        <h3>Online Learning Platform</h3>
+        <p>Our project focus on a system that enables remote education through interactive courses, multimedia resources, and virtual collaboration tools.</p>
+      </div>
+    </div>
+  </div>
             <h6 class="page3-h6">Contact</h6>
        
             <form method="post" action="" name="contact-form" class="wrapper-form block">
