--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div>
                 <p class="page1-p block">_______________________________</p>
                 <p class="page1-p2 block">I’m shi, currently a student studying at University of Computer 
-                    Studies, Yangon. I’m passionate about coding and I’m specialized in software engineering major. And of course,
+                    Studies, Yangon. I’m passionate about coding and I’m also specialized in software engineering major. And of course,
                       I am satisfied with the major I have taken. I consider myself as a person full of desire to learn. I am highly interested 
                       in web design and I also enjoy creating cute apps. Still in progress!!
 
