--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <span class="straight-line">______________</span>
             </div></a> 
             <a href="aboutme.html"><div class="page2-list-fifth-div">
-                <button class="page2-button"><i class="fa-solid fa-arrow-right"></i></button>
+                <button class="page2-button"><i class="fa-solid fa-arrow-right arrow-icon"></i></button>
                 <p class="page2-p">Browse All</p>
             </div></a>
             
