--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
     <div class="aboutme-wrapper block">
         <div class="edu-div">
         <h1 class="aboutme-h1">Education</h1>
-        <button class="aboutme-btn"><i class="fa-solid fa-paperclip"></i></button>
+        <button class="aboutme-btn"><i class="fa-solid fa-paperclip arrow-icon"></i></button>
         <span class="aboutme-span">University of Computer Studies, Yangon,  </span><br>
        <span class="aboutme-span-2">3rd year, VII semester.</span><br>
        <span class="aboutme-span-3">Specialized major-Software Engineering</span>
@@ -69,7 +69,7 @@
 
        <div class="edu-div">
         <h1 class="aboutme-h1">Skill</h1>
-        <button class="aboutme-btn"><i class="fa-solid fa-star"></i></button>
+        <button class="aboutme-btn"><i class="fa-solid fa-star arrow-icon"></i></button>
         <span class="aboutme-span">UI design illustration(Tools used-Figma)</span><br>
        <span class="aboutme-span-2">I like to create my own design for my</span>
        <span class="aboutme-span-3">project with figma and start coding</span>
@@ -80,7 +80,7 @@
 
        <div class="edu-div">
         <h1 class="aboutme-h1">Interest</h1>
-        <button class="aboutme-btn"><i class="fa-solid fa-heart"></i></button>
+        <button class="aboutme-btn"><i class="fa-solid fa-heart arrow-icon"></i></button>
         <span class="aboutme-span">Creating cute/aesthetic apps</span><br>
        <span class="aboutme-span-3">My inspiration app is called folderly. You</span>
        <span class="aboutme-span-2">should check it out.</span>
