--- a/project.html
+++ b/project.html
@@ -59,10 +59,10 @@
    
     <div class="wrapper block">
         <button class="strength-button"><h1 class="strength-h1">Some Projects</h1></button> 
-        <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Health/fitness tracker</span><br>
-        <button class="contact-btn"> <i class="fa-solid fa-check"></i></button><span class="contact-span">To Do List</span><br>
-        <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Online learning System</span><br>
-        <button class="contact-btn"><i class="fa-solid fa-check"></i></button><span class="contact-span">Album Selling System</span>
+        <button class="contact-btn"><i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">Health/fitness tracker</span><br>
+        <button class="contact-btn"> <i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">To Do List</span><br>
+        <button class="contact-btn"><i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">Online learning System</span><br>
+        <button class="contact-btn"><i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">Album Selling System</span>
     </div>
 
 
