--- a/interest.html
+++ b/interest.html
@@ -90,7 +90,7 @@
     
         <nav>
             <div class="logo">
-              <a href="index.html">   <button class="page2-button"><i class="fa-solid fa-arrow-left"></i></button></a> 
+              <a href="index.html">   <button class="page2-button"><i class="fa-solid fa-arrow-left arrow-icon"></i></button></a> 
             </div>
             <div class="nav-list">
            
