--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </form>
         
     
-    <div class="wrapper-form block">
+    <div class="wrapper-form-contact block">
         <button class="contact-btn"><i class="fa-solid fa-envelope arrow-icon"></i></button><span class="contact-span">wahwint72@gmail.com</span><br>
         <button class="contact-btn"> <i class="fa-solid fa-phone arrow-icon"></i></button><span class="contact-span">09-254229977</span><br>
         <button class="contact-btn"><i class="fa-brands fa-github arrow-icon"></i></button><span class="contact-span">https://github.com/wintwah243</span>
