--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
             <h6 class="page3-h6">Contact</h6>
        
-            <form method="post" action="" name="contact-form" class="wrapper-form block">
+            <form method="post" action="" name="contact-form" class="wrapper-form-contact block">
                 <input type="text" name="Your-name" placeholder="Your Name" class="sim-input"><br>
                 <input type="text" name="Your-email" placeholder="Your Email" class="sim-input"><br>
                 <input type="text" name="Feedback" placeholder="Write Message..." class="large"><br>
