--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
               
             
         </nav>
-    <form method="post" action="" name="contact-form" class="wrapper block">
+    <form method="post" action="" name="contact-form" class="wrapper-form-contact block">
         <input type="text" name="Your-name" placeholder="Your Name" class="sim-input"><br>
         <input type="text" name="Your-email" placeholder="Your Email" class="sim-input"><br>
         <input type="text" name="Feedback" placeholder="Write Message..." class="large"><br>
