--- a/project.html
+++ b/project.html
@@ -65,16 +65,13 @@
         <button class="contact-btn"><i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">Album Selling System</span>
     </div>
 
-
-    <div class="pj-wrapper block">
-        <button class="pj-list-btn">Some Web Design</button>
-        
-       </div>
-       <img src="albumsellingpj.png"  class="pj1"> 
-       <img src="pj2.png"  class="pj1"> 
+     <div class="wrapper-form-web-design block">
+        <button class="btnedu"><h1 class="strength-h1">Some Web Design</h1></button>
+        <img src="pj2.png" class="id2-img">
+        <img src="pj4.png" class="id2-img">
+        <img src="pj5.png" class="id2-img">
        
-       <img src="pj4.png"  class="pj1"> 
-       <img src="pj5.png" class="pj1">
+      </div>
 
 
 <script>
