--- a/project.html
+++ b/project.html
@@ -67,9 +67,9 @@
 
      <div class="wrapper-form-web-design block">
         <button class="btnedu"><h1 class="strength-h1">Some Web Design</h1></button>
-        <img src="pj2.png" class="id-img">
-        <img src="pj4.png" class="id-img">
-        <img src="albumsellingpj.png" class="id-img">
+        <img src="pj2.png" class="id2-img">
+        <img src="pj4.png" class="id2-img">
+        <img src="albumsellingpj.png" class="id2-img">
        
       </div>
 
