--- a/edu.html
+++ b/edu.html
@@ -57,11 +57,9 @@
      <h6 class="strength-h6-edu">-Participation Certificate at HackAtom Myanmar 2024 </h6>
      <h6 class="strength-h6-edu">-Volunteer Experience At Talk With Me (With Me Organization) </h6>
      <h6 class="strength-h6-edu">-Scout Member since High School </h6>
-    <button class="btnpdf" onclick="alert("Oh! This is not available now.T-T I'm working on it. Sorry for the inconvenience!")">Download pdf <i class="fa-solid fa-download"></i></button>
+    <button class="btnpdf" onclick="alert("Oh! This is not available now.T-T I am working on it. Sorry for the inconvenience!")">Download pdf <i class="fa-solid fa-download"></i></button>
   </div>
 
-  <img src="memory3.jpeg"  class="pj1"> 
- 
 <script>
     let menuList = document.getElementById("menuList")
     menuList.style.maxHeight = "0px";
