--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
 <body class="bg-theme">
     <nav>
         <div class="logo">
-            <h5 class="logo-h5">Shii</h5>
+            <a href="index.html"><h5 class="logo-h5">Shii</h5></a>
         </div>
         <div class="nav-list">
         
