--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
     
         <nav>
             <div class="logo">
-                <h5 class="logo-h5">Shii</h5>
+                <a href="index.html"><h5 class="logo-h5">Shii</h5></a>
             </div>
             <div class="nav-list">
             
