--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
 
             <h6 class="page3-h6">Contact</h6>
        
-            <form method="post" action="" name="contact-form" class="wrapper-form-contact block">
-                <input type="text" name="Your-name" placeholder="Your Name" class="sim-input"><br>
-                <input type="text" name="Your-email" placeholder="Your Email" class="sim-input"><br>
-                <input type="text" name="Feedback" placeholder="Write Message..." class="large"><br>
-                <input type="submit" class="send-btn" value="submit" id="submit">
-            </form>
+        <form method="post" action="" name="contact-form" class="wrapper-form-contact block">
+            <input type="text" name="Your-name" placeholder="Your Name" class="sim-input"><br>
+            <input type="text" name="Your-email" placeholder="Your Email" class="sim-input"><br>
+            <textarea name="Feedback" placeholder="Write Message..." class="large"></textarea><br>
+            <input type="submit" class="send-btn" value="submit" id="submit">
+        </form>
        
         <div class="footer">
             <div class="social-link-list">
