--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
        
         <div class="footer">
             <div class="social-link-list">
-                <a href=""><button class="footer-btn"><i class="fa-brands fa-facebook arrow-icon"></i></button></a>
-                <a href=""><button class="footer-btn"><i class="fa-brands fa-instagram arrow-icon"></i></button></a>
-                <a href=""><button class="footer-btn"><i class="fa-brands fa-github arrow-icon"></i></button></a>
-                <a href=""><button class="footer-btn"><i class="fa-brands fa-linkedin arrow-icon"></i></button></a>
+                <a href="https://facebook.com/wint.wah.39566905"><button class="footer-btn"><i class="fa-brands fa-facebook arrow-icon"></i></button></a>
+                <a href="https://www.instagram.com/shi1_shi4?igsh=aGczNmNqOGhocjdv&utm_source=qr"><button class="footer-btn"><i class="fa-brands fa-instagram arrow-icon"></i></button></a>
+                <a href="https://github.com/wintwah243"><button class="footer-btn"><i class="fa-brands fa-github arrow-icon"></i></button></a>
+                <a href="https://linkedin.com/in/wint-wah-386240307"><button class="footer-btn"><i class="fa-brands fa-linkedin arrow-icon"></i></button></a>
             </div>
            
             <div class="copyright-wrapper">
