--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 }
 
 .block {
-    opacity: 0; /* Initial state */
-    animation: appear 1s ease forwards; /* Add a duration */
+    opacity: 0; 
+    animation: appear 1s ease forwards; 
 }
 @media only screen and (max-width:540px){
     .wrapper{
@@ -101,8 +101,9 @@
       <button class="strength-button"><h1 class="strength-h1">My Strength</h1></button> 
        
        <h6 class="strength-h6">I'm always enthusiastic when it comes to app development. In the web design sector,
-        I prefer creating my own design with Figma and start coding process. I enjoy learning and self-studying new things related to
-     app development. In the future, I plan to create and launch my own design apps. </h6>
+        I prefer creating my own design with Figma and start coding process. I enjoy learning and
+        self-studying new things related to app development. In the future, I plan to create and launch my own design apps. 
+       </h6>
      </div>
 
          <div class="circular-wrapper">
