--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
-       @keyframes appear {
+    @keyframes appear {
     from {
         opacity: 0;
-        transform: scale(0.5);
+        scale: 0.5;
     }
     to {
         opacity: 1;
-        transform: scale(1);
+        scale: 1;
     }
 }
 
 .block {
-    opacity: 0; 
-    animation: appear 1s ease forwards; 
+    animation: appear linear;
+    animation-timeline:view();
+    animation-range: entry 0% cover 40%;
 }
 @media only screen and (max-width:540px){
     .wrapper{
@@ -106,7 +107,7 @@
        </h6>
      </div>
 
-         <div class="circular-wrapper">
+         <div class="circular-wrapper block">
         <h1 class="circular-h1">Capability</h1>
         <div class="circular-list">
         <div class="progress-circle" data-progress="85" style="--progress: 85"><h6 class="circular-h6">consistency</h6></div>
@@ -123,9 +124,9 @@
             <button class="contact-btn"><i class="fa-solid fa-check arrow-icon"></i></button><span class="contact-span">Album Selling System</span>
         </div>
 
-        <h6 class="page3-h6">Project Description</h6>
+        <h6 class="page3-h6 block">Project Description</h6>
 
-        <div class="card-container">
+        <div class="card-container block">
             <div class="card">
               <img src="fitness-tracking-app-mobile-vector-illustration-cartoon-style-smartphone-with-heart-rate-tracker_107661-153.avif" alt="Fitness Tracker">
               <div class="card-content">
